# smartcar_seekfree_lib

./: .clangd  .gitmodules  README.en.md  justfile  multi.its
.devcontainer/: Dockerfile  devcontainer.json
Example/: CMakeLists.txt  cross.cmake  replace_ip.sh
Example/Coreboard_Demo/E07_pit_demo/: main.cpp
Example/Coreboard_Demo/E08_flash_demo/user/: main.cpp
Example/Coreboard_Demo/libraries/zf_device/: zf_device_ips200_fb.cpp
Example/Motherboard_Demo/E01_01_button_switch_buzzer_demo/: main.cpp
Example/Motherboard_Demo/E01_02_beep_demo/user/: main.cpp
Example/Motherboard_Demo/E02_01_drv8701e_double_motor_control_demo/: main.cpp
Example/Motherboard_Demo/E02_03_brushless_electric_regulating_demo/: CMakeLists.txt
Example/Motherboard_Demo/E04_01_adc_battery_volatage_detection_demo/user/: main.cpp
Example/Motherboard_Demo/E08_01_uvc_cmera_ips200_display_demo/: main.cpp
Example/Motherboard_Demo/libraries/zf_driver/: zf_driver_pit_fd.h
Example/Motherboard_Demo/opencv_check/: main.cpp
Example/libraries/: CMakeLists.txt
Example/libraries/zf_common/: zf_common_headfile.h
Example/libraries/zf_device/: zf_device_ips200_fb.cpp  zf_device_ips200_fb.h  zf_device_uvc.cpp  zf_device_uvc.h
LS2K300_Library/: replace_ip.sh
LS2K300_Library/Example/Motherboard_Demo/E1_motherboard/E01_03_adc_battery_volatage_detection_demo/user/: CMakeLists.txt
LS2K300_Library/Example/Motherboard_Demo/E9_tflite/libraries/zf_driver/: zf_driver_tcp_client.cpp
LS2K300_Library/Seekfree_LS2K0300_Opensource_Library/libraries/doc/: version.md
buildroot-2405/: build.sh
ls2k0300_linux_4.19/: .gitignore  build.sh
ls2k0300_linux_4.19/arch/loongarch/boot/dts/loongson/: 2k0300-pinctrl.dtsi  loongson64_2k2000_pai.dts  loongson_2k0300.dtsi  loongson_2k0300_pai_99_tfcard.dts  loongson_2k0300_pai_99_wifi.dts  loongson_2k0300_pai_dual_net.dts  loongson_2k0300_pai_single_net.dts  seekfree_smart_car_pai_99.dts
ls2k0300_linux_4.19/arch/loongarch/configs/: loongson_2k300_defconfig  loongson_2k300_smart_car_defconfig
ls2k0300_linux_4.19/drivers/: Kconfig  Makefile
ls2k0300_linux_4.19/drivers/gpu/drm/panel/: panel-sitronix-st7789v.c
ls2k0300_linux_4.19/drivers/i2c/busses/: i2c-ls.c
ls2k0300_linux_4.19/drivers/iio/adc/: Kconfig  Makefile
ls2k0300_linux_4.19/drivers/mmc/host/: ls2kmci.c
ls2k0300_linux_4.19/drivers/mtd/spi-nor/: ls-quadspi.c
ls2k0300_linux_4.19/drivers/pwm/: Makefile  pwm-ls.c
ls2k0300_linux_4.19/drivers/seekree_libraries/: Kconfig  Makefile
ls2k0300_linux_4.19/drivers/seekree_libraries/zf_device/: zf_device_config.c  zf_device_config.h  zf_device_imu660ra.c  zf_device_imu660ra.h  zf_device_imu963ra.c  zf_device_imu963ra.h  zf_device_imu_core.c  zf_device_imu_core.h
ls2k0300_linux_4.19/drivers/seekree_libraries/zf_driver/: zf_driver_atim.c  zf_driver_encoder.c  zf_driver_encoder.h  zf_driver_gpio.c  zf_driver_gtim.c  zf_driver_pwm.c
ls2k0300_linux_4.19/drivers/spi/: spi-ls-v1.c
ls_2k0300_env/loongson-gnu-toolchain-8.3-x86_64-loongarch64-linux-gnu-rc1.6/: versions
ls_2k0300_env/loongson-gnu-toolchain-8.3-x86_64-loongarch64-linux-gnu-rc1.6/lib/gcc/loongarch64-linux-gnu/8.3.0/: libcaf_single.la
ls_2k0300_env/loongson-gnu-toolchain-8.3-x86_64-loongarch64-linux-gnu-rc1.6/libexec/gcc/loongarch64-linux-gnu/8.3.0/: collect2  liblto_plugin.la  liblto_plugin.so.0.0.0  lto-wrapper
ls_2k0300_env/loongson-gnu-toolchain-8.3-x86_64-loongarch64-linux-gnu-rc1.6/loongarch64-linux-gnu/lib/ldscripts/: elf64loongarch.x  elf64loongarch.xbn  elf64loongarch.xc  elf64loongarch.xce  elf64loongarch.xd  elf64loongarch.xdc  elf64loongarch.xdce  elf64loongarch.xde  elf64loongarch.xdw  elf64loongarch.xdwe  elf64loongarch.xe  elf64loongarch.xn  elf64loongarch.xs  elf64loongarch.xsc  elf64loongarch.xsce  elf64loongarch.xse  elf64loongarch.xsw  elf64loongarch.xswe  elf64loongarch.xw  elf64loongarch.xwe
ls_2k0300_env/loongson-gnu-toolchain-8.3-x86_64-loongarch64-linux-gnu-rc1.6/loongarch64-linux-gnu/sysroot/usr/include/: elf.h  fpu_control.h
ls_2k0300_env/loongson-gnu-toolchain-8.3-x86_64-loongarch64-linux-gnu-rc1.6/loongarch64-linux-gnu/sysroot/usr/lib/: gcc
ls_2k0300_env/loongson-gnu-toolchain-8.3-x86_64-loongarch64-linux-gnu-rc1.6/loongarch64-linux-gnu/sysroot/usr/lib64/: libasan.so.5.0.0  libatomic.so.1.2.0  libgfortran.so.5.0.0  libgomp.so.1.0.0  libitm.so.1.0.0  libjemalloc.so.2  liblsan.so.0.0.0  (+5 more)
ls_2k0300_env/loongson-gnu-toolchain-8.3-x86_64-loongarch64-linux-gnu-rc1.6/share/: licenses.txt
ls_2k0300_env/loongson-gnu-toolchain-8.3-x86_64-loongarch64-linux-gnu-rc1.6/share/info/: annotate.info  as.info  bfd.info  binutils.info  cpp.info  cppinternals.info  dir  gcc.info  gccinstall.info  gccint.info  gdb.info  gfortran.info  gprof.info  ld.info  libgomp.info  libitm.info  stabs.info
ls_2k0300_env/loongson-gnu-toolchain-8.3-x86_64-loongarch64-linux-gnu-rc1.6/share/man/man1/: loongarch64-linux-gnu-addr2line.1  loongarch64-linux-gnu-ar.1  loongarch64-linux-gnu-as.1  loongarch64-linux-gnu-c++filt.1  loongarch64-linux-gnu-dlltool.1  loongarch64-linux-gnu-elfedit.1  loongarch64-linux-gnu-gdb-add-index.1  loongarch64-linux-gnu-gdb.1  loongarch64-linux-gnu-gdbserver.1  loongarch64-linux-gnu-gprof.1  loongarch64-linux-gnu-ld.1  loongarch64-linux-gnu-nm.1  loongarch64-linux-gnu-objcopy.1  loongarch64-linux-gnu-objdump.1  loongarch64-linux-gnu-ranlib.1  loongarch64-linux-gnu-readelf.1  loongarch64-linux-gnu-size.1  loongarch64-linux-gnu-strings.1  loongarch64-linux-gnu-strip.1  loongarch64-linux-gnu-windmc.1  loongarch64-linux-gnu-windres.1
ls_2k0300_env/loongson-gnu-toolchain-8.3-x86_64-loongarch64-linux-gnu-rc1.6/share/man/man5/: loongarch64-linux-gnu-gdbinit.5
【软件】交叉编译工具 上位机等/旧世界WiFi驱动修复重启不panic/: aic8800_bsp.ko
(+58 files in other folders)
